2013-06-19  Basic  <simsong@Mucha.local>

	* configure.ac: fixed bug in which expat.h was not being checked for. use AC_CHECK_HEADERS() instead of AC_CHECK_HEADER(), as AC_CHECK_HEADER() requires that you add additional logic and AC_CHECK_HEADERS() automatically adds HAVE_HEADER_H.

2013-06-18  Basic  <simsong@Mucha.local>

	* src/scan_zip.cpp (scan_zip): removed name_len (not needed)

2013-06-17  Basic  <simsong@mucha.lan>

	* src/pyxpress.h: removed 'extern' designation

	* src/image_process.h (i): removed extern size_t opt_pagesize and extern size_t opt_margin. These are now phase1 configuration variables that are passed into the image_iterator.

2013-06-15  Basic  <simsong@Mucha.local>

	* src/scan_email.flex (Host): removed ip_written and ip_tested (always remove dead code)

2013-06-08  Basic  <simsong@Mucha.local>

	* src/be13_api/feature_recorder.cpp (feature_recorder::carve): changed carving so that carved files are stored with the filename of their location. Also, fixed check-then-access race error in feature_record.cpp
	(feature_recorder::carve): fixed race conditon in carving.

2013-05-28  Basic  <simsong@ncr.nps.edu>

	* feature_recorder_set.cpp - debug is now a static variable

	* src/image_process.h (image_process): debug is now a local variable for image_process.h

2013-05-22  Man Page  <simsong@mncrnpsedu.local>

	* src/be13_api/bulk_extractor_i.h (DEBUG_EXIT_EARLY): removed DEBUG_MALLOC and DEBUG_MALLOC_FAIL_FREQUENCY; now is handled with -S system

	* src/bulk_extractor.h: removed all global options; replaced with the be config system

	* src/pyxpress.c: added OpenSSL exemption per email from Matthieu Suiche

	* src/be13_api/sbuf.h: md5 support removed from sbuf

2013-05-21  Basic  <simsong@public-172-21-213-43.near.uiuc.edu>

	* src/be13_api/plugin.cpp (plugin::get_scanner_feature_file_names): extensive changes to make the global functions part of the be13::plugin class.

2013-05-20  Basic  <simsong@npsair.local>
